# python-tuskarclient

./: .coveragerc  .gitignore  .gitreview  .travis.yml  README.md  README.rst  openstack-common.conf  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
doc/source/: conf.py  index.rst
doc/source/cli/v2/: index.rst  plans.rst  roles.rst
doc/source/ext/: gen_ref.py
doc/source/man/: tuskar.rst
doc/source/ref/: client.rst  exc.rst  index.rst
doc/source/ref/v1/: client.rst  index.rst  overcloud_roles.rst  overcloud_roles_shell.rst  overclouds.rst  overclouds_shell.rst
tools/: tuskar_with_venv.sh
tuskarclient/: __init__.py  client.py  exc.py  i18n.py  shell.py  utils.py
tuskarclient/common/: auth.py  base.py  formatting.py  http.py  utils.py
tuskarclient/openstack/common/: _i18n.py  cliutils.py  gettextutils.py  strutils.py
tuskarclient/openstack/common/apiclient/: auth.py  base.py  client.py  exceptions.py  fake_client.py  utils.py
tuskarclient/osc/: plugin.py
tuskarclient/osc/v2/: plan.py  role.py
tuskarclient/tests/: test_client.py  test_http.py  test_shell.py  test_utils.py  utils.py
tuskarclient/tests/common/: test_auth.py  test_base.py  test_formatting.py  test_utils.py
tuskarclient/tests/integration/: test_help_command.py  test_help_flavor_create.py  test_help_flavor_delete.py  test_help_flavor_list.py  test_help_flavor_show.py  test_help_flavor_update.py  test_help_rack_create.py  test_help_rack_delete.py  test_help_rack_list.py  test_help_rack_show.py  test_help_rack_update.py
tuskarclient/tests/osc/: test_plugin.py
tuskarclient/tests/osc/v2/: fakes.py  test_plans.py  test_roles.py
tuskarclient/tests/v1/: test_client.py  test_data_centers.py  test_endpoints.py  test_flavors.py  test_flavors_shell.py  test_nodes.py  test_overcloud_roles.py  test_overcloud_roles_shell.py  test_overclouds.py  test_overclouds_shell.py  test_racks.py  test_racks_shell.py  test_resource_categories.py  test_resource_class.py  test_resource_classes.py  test_resource_classes_shell.py
tuskarclient/tests/v1_0/: test_client.py  test_racks.py  test_resource_class.py
tuskarclient/tests/v2/: test_client.py  test_plans.py  test_plans_shell.py  test_roles.py  test_roles_shell.py
tuskarclient/v1/: argparsers.py  client.py  data_centers.py  endpoints.py  flavors.py  flavors_shell.py  nodes.py  overcloud_roles.py  overcloud_roles_shell.py  overclouds.py  overclouds_shell.py  racks.py  racks_shell.py  resource_categories.py  resource_classes.py  resource_classes_shell.py  shell.py
tuskarclient/v1_0/: argparsers.py  client.py  racks.py  resource_classes.py
tuskarclient/v2/: client.py  plans.py  plans_shell.py  roles.py  roles_shell.py  shell.py
