[metadata]
name = python-tuskarclient
summary = Client library for OpenStack Management API
description-file =
    README.rst
license = Apache License, Version 2.0
author = Jiri Stransky
author-email = jistr@redhat.com
home-page = https://github.com/jistr/python-tuskarclient
classifier =
    Environment :: Console
    Environment :: OpenStack
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3

[files]
packages =
    tuskarclient

[entry_points]
console_scripts =
    tuskar = tuskarclient.shell:main

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html
