[metadata]
name = python-tuskarclient
summary = Client library for OpenStack Management API
description-file =
    README.rst
license = Apache License, Version 2.0
author = Jiri Stransky
author-email = jistr@redhat.com
home-page = https://github.com/openstack/python-tuskarclient
classifier =
    Environment :: Console
    Environment :: OpenStack
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3

[files]
packages =
    tuskarclient

[entry_points]
console_scripts =
    tuskar = tuskarclient.shell:main

openstack.cli.extension =
    management = tuskarclient.osc.plugin

openstack.management.v2 =
    management_plan_create = tuskarclient.osc.v2.plan:CreateManagementPlan
    management_plan_delete = tuskarclient.osc.v2.plan:DeleteManagementPlan
    management_plan_list = tuskarclient.osc.v2.plan:ListManagementPlans
    management_plan_set = tuskarclient.osc.v2.plan:SetManagementPlan
    management_plan_show = tuskarclient.osc.v2.plan:ShowManagementPlan
    management_plan_add_role = tuskarclient.osc.v2.plan:AddManagementPlanRole
    management_plan_remove_role = tuskarclient.osc.v2.plan:RemoveManagementPlanRole
    management_plan_download = tuskarclient.osc.v2.plan:DownloadManagementPlan
    management_role_list = tuskarclient.osc.v2.role:ListRoles

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html
